# BaseConverter

./: .gitignore  CMakeLists.txt  calculationHelper.cpp  calculationHelper.h  dataStructureConverter.cpp  dataStructureConverter.h  globals.cpp  globals.h  hexConverter.cpp  hexConverter.h  main.cpp  stringManipulator.cpp  stringManipulator.h
